# snanomaly

./: .gitignore  .pylintrc  PLANS.md  README.md  pyproject.toml  ruff.toml
notebooks/: data_loading.ipynb  dataloading.ipynb  debugging.ipynb  preprocessing.ipynb
outputs/: valid_canditates.csv
src/snanomaly/: __init__.py  config.py
src/snanomaly/dataset/: __init__.py  dataset.py  exception.py  factory.py  osc.py  osc2019.py  osc2019_mini.py
src/snanomaly/models/: __init__.py
src/snanomaly/models/dataset/: dataset.py  osc.py  osc2019.py  osc2019_mini.py
src/snanomaly/models/sncandidate/: __init__.py  alias.py  band.py  bands.py  correlation.py  date.py  datum.py  dec.py  floatdatum.py  observation.py  photometry.py  photometryobs.py  ra.py  sncandidate.py  source.py  spectra.py  spectraobs.py  stringdatum.py  suggestion.py
src/snanomaly/preprocessing/: binning.py
src/snanomaly/preprocessing/cleaning/: validation_pipeline.py  validation_result.py
src/snanomaly/preprocessing/cleaning/checks/: check.py  photometry.py
src/snanomaly/scripts/: lint.py  logprocessor.py
src/snanomaly/utils/: converters.py
src/snanomaly/visualization/: photometry.py
tests/snanomaly/models/sncandidate/: correlation.py  datum.py  floatdatum.py  source.py
