[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "snanomaly"
version = "0.1.0"
description = "Anomaly detection in supernova catalogues."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Csongor Szász", email = "szasz.csongor1@gmail.com" }]
dependencies = [
    "numpy",
    "scikit-learn",
    "plotly",
    "polars",
    "pydantic",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "ruff",
    "pylint",
]

[project.urls]
Repository = "https://github.com/csongorszasz/snanomaly"

[tool.pytest]
testpaths = ["tests"]

[tool.isort]
profile = "black"
