[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "snanomaly"
version = "0.1.0"
description = "Anomaly detection in supernova catalogues."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Csongor Szász", email = "szasz.csongor1@gmail.com" }]
dependencies = [
    "numpy",
    "scikit-learn",
    "plotly",
    "polars",
    "attrs",
    "cattrs",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "pylint",
    "mypy",
]

[project.urls]
Repository = "https://github.com/csongorszasz/snanomaly"

[project.scripts]
lint = "snanomaly.scripts.lint:main"

[tool.pytest]
testpaths = ["tests"]
